--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,9 @@
 name: Report
 main: ImNotYourDev\Report\Report
-api: 3.9.1
+api:
+  - 3.9.0
+  - 3.9.1
+  - 3.9.2
+  - 3.9.3
 version: 1.0
 author: ImNotYourDev
