--- a/plugin.yml
+++ b/plugin.yml
@@ -1,12 +1,11 @@
 name: Report
 main: ImNotYourDev\Report\Report
-api:
-  - 3.9.0
-  - 3.9.1
-  - 3.9.2
-  - 3.9.3
+api: 3.7.0
 version: 1.3
 author: ImNotYourDev
+
+softdepend:
+  - PixelgamesToDiscord
 
 permissions:
   reportsystem.admin:
